--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -117,3 +117,10 @@
     font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   }
 }
+.recharts-legend-wrapper {
+  position: relative !important;
+  width: 100% !important;
+  height: auto !important;
+  bottom: 0 !important;
+  left: 0 !important;
+}
